[package]
name = "maid_lead_tgbot"
version = "0.1.0"
authors = ["Artileda <47468136+ywnn@users.noreply.github.com>"]
edition = "2018"

[dependencies]
teloxide = { version = "0.4", features = ["auto-send"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
